--- a/src/components/word/word.css
+++ b/src/components/word/word.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 16px;
+  padding: 8px 16px;
 }
 
 .answer {
   font-size: 18px;
   font-weight: 700;
-  margin: 8px 0;
+  margin: 0 8px;
   pointer-events: none;
 }
 
@@ -17,6 +17,6 @@
   font-size: 18px;
   font-weight: 700;
   padding: 0 48px;
-  margin: 8px 0;
+  margin: 16px 8px;
   cursor: pointer;
 }
