--- a/src/components/word/word.css
+++ b/src/components/word/word.css
@@ -11,6 +11,7 @@
   font-weight: 700;
   margin: 0 8px;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .word {
@@ -19,4 +20,24 @@
   padding: 0 48px;
   margin: 16px 8px;
   cursor: pointer;
+}
+
+.select {
+  color: silver;
+}
+
+.correct {
+  color: green;
+}
+
+.wrong {
+  color: red;
+}
+
+.correctAnswer {
+  color: greenyellow;
+}
+
+.wrongAnswer {
+  color: palevioletred;
 }
