--- a/src/pages/Game/game.css
+++ b/src/pages/Game/game.css
@@ -1,8 +1,9 @@
 .layout-game {
+  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 32px 0;
 }
 
 .game-container {
@@ -19,7 +20,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 32px;
+  padding: 16px;
   margin-bottom: 4px;
 }
 
