--- a/src/pages/Start/Start.css
+++ b/src/pages/Start/Start.css
@@ -1,10 +1,7 @@
-.container {
+.user-container {
   height: 100vh;
   width: 100%;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 h1 {
